@@ -3,7 +3,7 @@ use warnings;
 
 use Config::Utils qw(conflict);
 use English qw(-no_match_vars);
-use Test::More 'tests' => 3;
+use Test::More 'tests' => 4;
 use Test::NoWarnings;
 
 # Test.
@@ -21,3 +21,8 @@ eval {
 	conflict($self, {'key' => 'value'}, 'key');
 };
 is($EVAL_ERROR, "Conflict in 'key'.\n");
+
+# Test.
+$self->{'set_conflicts'} = 1;
+my $ret = conflict($self, {}, 'key');
+is($ret, undef, 'No conflict.');
