@@ -1,6 +1,7 @@
 0.07
  - Fix Makefile.PL fails with no '.' in @INC.
  - Fix doc.
+ - Improve coverage of Utils::conflict().
  - Update Module::Install to 1.19 version.
  - Update copyright years.
  - Update my github user name.
